<resources>
    <string name="element_text">Element</string>
    <string name="app_name">OurDiary</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>

    <!--Contacts-->
    <string name="dialog_button_delete">删除</string>
    <string name="dialog_button_ok">确定</string>
    <string name="dialog_button_cancel">取消</string>
    <string name="contacts_detail_edt_name">Name</string>
    <string name="contacts_detail_edt_phone_number">Phone</string>
    <string name="dialog_button_call">Call</string>
    <string name="contacts_call_phone_permission_title">Permisssion</string>
    <string name="contacts_call_phone_permission_content">Need permission to call phone</string>
    <string name="contacts_call_phone_no_call_function">Your device can\'t call phone</string>

    <!--Topic detail-->
    <string name="topic_detail_name">Topic name</string>
    <string name="topic_detail_text_color">Text color</string>
    <string name="topic_dialog_delete_title">Delete</string>
    <string name="topic_dialog_delete_content">Do you want to delete %1$s?</string>

    <!--Memo-->
    <string name="memo_item_add">Add</string>
    <string name="toast_memo_empty">Memo is empty!</string>

    <!--diary_photo_page-->
    <string name="image_description">Image</string>
    <string name="title_activity_setting">SettingActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="ch_welcome">"欢迎！"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ch_login_failed">"登录失败"</string>


</resources>