<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_contacts_detail_top_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:minHeight="40dp"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp">


        <ImageView
            android:id="@+id/iv_contacts_detail_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:src="@drawable/iv_contacts"
            app:tint="@color/color_gray" />

        <EditText
            android:id="@+id/et_contacts_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@android:color/white"
            android:gravity="center"
            android:hint="@string/contacts_detail_edt_name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@color/edittext_hint"
            android:textSize="24dp" />

        <EditText
            android:id="@+id/et_contacts_detail_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@android:color/white"
            android:gravity="center"
            android:hint="@string/contacts_detail_edt_phone_number"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingTop="0dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/edittext_hint"
            android:textSize="18dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">


        <Button
            android:id="@+id/btn_contacts_detail_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/dialog_button_delete"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_contacts_detail_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/dialog_button_ok"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_contacts_detail_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/btn_contacts_detail_ok"
            android:gravity="center"
            android:text="@string/dialog_button_cancel"
            android:textAllCaps="false" />
    </RelativeLayout>

</LinearLayout>
