<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_gray"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LL_topic_detail_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/topic_detail_name"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/EDT_topic_detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:backgroundTint="@android:color/white"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/edittext_hint" />
            </LinearLayout>

            <!--> this function will be add later!
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/topic_detail_text_color"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:id="@+id/IV_topic_color"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>
            <-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/SP_topic_detail_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/spinner_bg"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/But_topic_detail_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"

                android:text="@string/dialog_button_cancel"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/But_topic_detail_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_button_ok"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>